# writepass

./: CMakeLists.txt  README.md
encrypass/: CMakeLists.txt  encry.cpp
ollvm/include/llvm/Transforms/Obfuscation/: BogusControlFlow.h  Flattening.h  Split.h  Substitution.h
ollvm/lib/: CMakeLists.txt  LLVMBuild.txt
ollvm/lib/Transforms/Obfuscation2/: BogusControlFlow.cpp  CMakeLists.txt  Flattening.cpp  LLVMBuild.txt  SplitBasicBlocks.cpp  Substitution.cpp
